--- a/index.html
+++ b/index.html
@@ -2,16 +2,26 @@
 <html lang="pl">
 <head>
     <meta charset="utf-8">
-	 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title></title>
     <meta name="description" content="">
     <meta name="keywords" content="">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="conteiner">
-        <div class="nav">
+        <header class="">
+            <div class="nav">
+                <ul>
+                    <li><a href=#>HOME</a></li>
+                    <li><a href=#>ABOUT ME</a></li>
+                    <li><a href=#>EXPERIENCE</a></li>
+                    <li><a href=#>PORTFOLIO</a></li>
+                </ul>
+            </div>
+            <div class="welcom"></div>
             
-        </div>
+        </header>
         
     </div>
 
