--- a/index.html
+++ b/index.html
@@ -3,27 +3,43 @@
 <head>
     <meta charset="utf-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title></title>
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>LUCRI</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="conteiner">
-        <header class="">
-            <div class="nav">
-                <ul>
-                    <li><a href=#>HOME</a></li>
-                    <li><a href=#>ABOUT ME</a></li>
-                    <li><a href=#>EXPERIENCE</a></li>
-                    <li><a href=#>PORTFOLIO</a></li>
+    <nav class="navbar">
+        <div class="container">
+            <a href="#" class="navbar-brand">LUCRI</a>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="przełącznik nawigacji">
+                <span class="navbar-toggler-icon">
+                </span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainmenu">
+                 <ul class=navbar-nav>
+                    <li><a class="nav-link" href=#>HOME</a></li>
+                    <li><a class="nav-link" href=#>ABOUT ME</a></li>
+                    <li><a class="nav-link" href=#>EXPERIENCE</a></li>
+                    <li><a class="nav-link" href=#>PORTFOLIO</a></li>
+                    <li><a class="nav-link" href=#>CONTACT</a></li>
                 </ul>
+
             </div>
-            <div class="welcom"></div>
             
+         </div>
+    </nav>
+        <header>
+            <div class="container">
+                    <div class="intro-text">
+                        <div class="intro">Welcome </div>
+                        <div class="intro">lor</div>
+                    </div>
+            </div>
         </header>
-        
-    </div>
+<script src="js/bootstrap.min.js"></script>
 
 </body>
 </html>
