--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>LUCRI</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -11,34 +11,56 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar navbar-fixed-top navbar-expand-md">
         <div class="container">
-            <a href="#" class="navbar-brand">LUCRI</a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="przełącznik nawigacji">
-                <span class="navbar-toggler-icon">
-                </span>
-            </button>
+            <div class="navbar-header">
+                    <a href="#" class="navbar-brand">LUCRI</a>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="przełącznik nawigacji">
+                        <span class="navbar-toggle-icon">
+                    </button>
+            </div>
             <div class="collapse navbar-collapse" id="mainmenu">
-                 <ul class=navbar-nav>
-                    <li><a class="nav-link" href=#>HOME</a></li>
-                    <li><a class="nav-link" href=#>ABOUT ME</a></li>
-                    <li><a class="nav-link" href=#>EXPERIENCE</a></li>
-                    <li><a class="nav-link" href=#>PORTFOLIO</a></li>
-                    <li><a class="nav-link" href=#>CONTACT</a></li>
+                 <ul class=" nav navbar-nav">
+                    <li class="nav-item active"><a class="nav-link" href=#>HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">ABOUT ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#experience">EXPERIENCE</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#portfolio">PORTFOLIO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a></li>
                 </ul>
 
             </div>
             
          </div>
     </nav>
-        <header>
-            <div class="container">
+    <header>
+        <div class="container">
                     <div class="intro-text">
-                        <div class="intro">Welcome </div>
+                        <div class="intro">Welcome 
+
+                        </div>
                         <div class="intro">lor</div>
                     </div>
-            </div>
-        </header>
+        </div>
+    </header>
+    <section id="about">
+
+    </section>
+    <section id="experience">
+
+    </section>
+    <section id="portfolio">
+
+    </section>
+    <section id="contact">
+
+    </section>
+    <footer>
+        <div>
+
+        </div>
+    </footer>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="js/bootstrap.min.js"></script>
 
 </body>
