--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="navbar-header">
                     <a href="#" class="navbar-brand">LUCRI</a>
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="przełącznik nawigacji">
-                        <span class="navbar-toggle-icon">
+                        <span class="navbar-toggle-icon"></span>
                     </button>
             </div>
             <div class="collapse navbar-collapse" id="mainmenu">
@@ -34,12 +34,10 @@
     </nav>
     <header>
         <div class="container">
-                    <div class="intro-text">
-                        <div class="intro">Welcome 
-
-                        </div>
-                        <div class="intro">lor</div>
-                    </div>
+            <div class="intro-text">
+                <div class="intro">Welcome             </div>
+            <div class="intro">lor</div>
+                </div>
         </div>
     </header>
     <section id="about">
@@ -48,7 +46,30 @@
     <section id="experience">
 
     </section>
-    <section id="portfolio">
+    <section id="portfolio" class="work">
+        <h2>PORTFOLIO</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla enim eros, volutpat ut convallis a, molestie sit amet mi. Phasellus iaculis diam et tristique bibendum. Cras sodales nulla sed tempus iaculis. Fusce tristique condimentum magna. Cras a maximus ipsum. Fusce eu quam non odio lacinia commodo sit amet quis ex. Nunc tempor et leo ac ultricies. Mauris consectetur elit et tortor mattis, venenatis egestas turpis mollis.</p>
+        <ul class="foto">
+            <li>
+                <img src="./img/network-2633608_640.jpg" alt="">
+            </li>
+            <li>
+                <img src="./img/lwl-4393369_640.jpg" alt="">
+            </li>
+            <li>
+                <img src="./img/lwl-4393373_640.jpg" alt="">
+            </li>
+            <li>
+                <img src="./img/network-3864383_640.jpg" alt="">
+            </li>
+            <li>
+                <img src="./img/3016446.jpg" alt="">
+            </li>
+            <li>
+                <img src="./img/glass-fiber-4515382_640.jpg" alt="">
+            </li>    
+
+        </ul>
 
     </section>
     <section id="contact">
