--- a/index.html
+++ b/index.html
@@ -8,34 +8,33 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://use.fontawesome.com/458500b67f.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-fixed-top navbar-expand-md">
+    <nav class="navbar navbar-expand-md justify-content-right">
         <div class="container">
             <div class="navbar-header">
                     <a href="#" class="navbar-brand">LUCRI</a>
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="przełącznik nawigacji">
-                        <span class="navbar-toggle-icon"></span>
+                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="przełącznik nawigacji">
+                        <span class="navbar-toggler-icon"></span>
                     </button>
             </div>
             <div class="collapse navbar-collapse" id="mainmenu">
-                 <ul class=" nav navbar-nav">
+                 <ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link" href=#>HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">ABOUT ME</a></li>
                     <li class="nav-item"><a class="nav-link" href="#experience">EXPERIENCE</a></li>
                     <li class="nav-item"><a class="nav-link" href="#portfolio">PORTFOLIO</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a></li>
                 </ul>
-
-            </div>
-            
+            </div>           
          </div>
     </nav>
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro">Welcome             </div>
+                <div class="intro">Welcome  </div>
             <div class="intro">lor</div>
                 </div>
         </div>
@@ -76,9 +75,7 @@
 
     </section>
     <footer>
-        <div>
-
-        </div>
+        <p>Copyright &copy; Creazy Sheep - 2019</p>
     </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
