--- a/index.html
+++ b/index.html
@@ -42,7 +42,32 @@
     <section id="about">
 
     </section>
-    <section id="experience">
+    <section id="experience" class="expfield">
+        <h2>EXPERIENCE</h2>
+        <p>Cras a maximus ipsum. Fusce eu quam non odio lacinia commodo sit amet quis ex. Nunc tempor et leo ac ultricies. Mauris consectetur elit et tortor mattis, venenatis egestas turpis mollis.</p>
+        <div>
+            <div class="single-field">
+                <div class="icon">
+                    <i class=""></i>
+                </div>
+                <h3>PROJECTC</h3>
+                <p>Cras sodales nulla sed tempus iaculis. Fusce tristique condimentum magna.</p>
+            </div>
+            <div class="single-field">
+                <div class="icon">
+                    <i class=""></i>
+                </div>
+                <h3>PROJECTC</h3>
+                <p>Cras sodales nulla sed tempus iaculis. Fusce tristique condimentum magna.</p>
+            </div>
+            <div class="single-field">
+                <div class="icon">
+                    <i class=""></i>
+                </div>
+                <h3>PROJECTC</h3>
+                <p>Cras sodales nulla sed tempus iaculis. Fusce tristique condimentum magna.</p>
+            </div>
+        </div>
 
     </section>
     <section id="portfolio" class="work">
