Added awesomeFont icon, deleted css rule referring to menu height, header image moved to internal div and added appropriate css rules

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <nav class="navbar navbar-expand-md justify-content-right">
         <div class="container">
             <div class="navbar-header">
-                    <a href="#" class="navbar-brand">LUCRI</a>
-                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="przełącznik nawigacji">
-                        <span class="navbar-toggler-icon"></span>
+                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fa fa-bars"></i>
                     </button>
+                    <a href="#" class="navbar-brand">LUCRI</a>
             </div>
             <div class="collapse navbar-collapse" id="mainmenu">
                  <ul class="navbar-nav">
@@ -32,7 +32,7 @@
          </div>
     </nav>
     <header>
-        <div class="container">
+        <div class="header-container">
             <div class="intro-text">
                 <div class="intro">Welcome  </div>
             <div class="intro">lor</div>
